--- a/player.html
+++ b/player.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
-    <script id="page-watch-player-script" data-uid="213" src="watch.player.js"></script>
+    <script id="page-watch-player-script" data-uid="213" src="gazer.player.js"></script>
     <link href="player.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
