--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
-    <script id="page-watch-script" data-uid="213" src="gazer.js"></script>
+    <script id="page-watch-script" data-uid="213" src="src/gazer.core.js"></script>
 </head>
 <body>
 <div style="height: 2500px">
