Structure changes pt.2

--- a/player.html
+++ b/player.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
+    <script src="src/gazer.core.js"></script>
+    <script src="src/gazer.utils.js"></script>
     <script id="page-watch-player-script" data-uid="213" src="src/gazer.player.js"></script>
     <link href="player.css" type="text/css" rel="stylesheet" />
 </head>
