Structure changes pt.3

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
-    <script src="src/gazer.core.js"></script>
+    <script src="src/gazer.recorder.js"></script>
     <script src="src/gazer.utils.js"></script>
-    <script id="page-watch-script" data-uid="213" src="src/gazer.tracker.js"></script>
+    <script id="page-watch-script" data-uid="213" src="src/gazer.events.js"></script>
 </head>
 <body>
 <div style="height: 2500px">
