--- a/player.html
+++ b/player.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
+    <script src="src/gazer.core.js"></script>
     <script src="src/gazer.recorder.js"></script>
     <script src="src/gazer.utils.js"></script>
     <script id="page-watch-player-script" data-uid="213" src="src/gazer.player.js"></script>
