trigger contentLoaded() event and "play/stop" player states

--- a/player.html
+++ b/player.html
@@ -11,16 +11,14 @@
     <link href="player.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-<div id="watch-player">
-    <iframe></iframe>
-</div>
+<div id="watch-player"></div>
 <span id="history">
     [
     {
         "event": "init",
         "date": 1417171156918,
         "data": {
-            "url": "http://localhost:63342/watchjs/index.html?sds=qwe",
+            "url": "http://omeleon.ru/",
             "height": 775,
             "width": 775,
             "navigator": "Mozilla/5.0(Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.2171.71Safari/537.36",
