--- a/player.html
+++ b/player.html
@@ -18,7 +18,7 @@
     "event": "init",
     "date": 1418397684803,
     "data": {
-      "url": "http://localhost:63342/gazerjs/index.html",
+      "url": "index.html",
       "height": 775,
       "width": 1583,
       "navigator": "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.2171.95 Safari/537.36",
