add simple storage manager

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="src/gazer.core.js"></script>
     <script src="src/gazer.recorder.js"></script>
     <script src="src/gazer.utils.js"></script>
+    <script src="src/gazer.storageManager.js"></script>
     <script id="page-watch-script" data-uid="213" src="src/gazer.events.js"></script>
 </head>
 <body>
