--- a/player.html
+++ b/player.html
@@ -12,717 +12,6 @@
 </head>
 <body>
 <div id="watch-player"></div>
-<span id="history">
-    [
-  {
-    "event": "init",
-    "date": 1418397684803,
-    "data": {
-      "url": "index.html",
-      "height": 775,
-      "width": 1583,
-      "navigator": "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.2171.95 Safari/537.36",
-      "pageX": 681,
-      "pageY": 291,
-      "scrollTop": 0,
-      "scrollLeft": 0,
-      "minMouseMove": 5
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397685409,
-    "data": {
-      "x": 1236,
-      "y": 240
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397686640,
-    "data": {
-      "x": 1230,
-      "y": 240
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397687543,
-    "data": {
-      "x": 554,
-      "y": 208
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397688445,
-    "data": {
-      "x": 845,
-      "y": 173
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397688746,
-    "data": {
-      "x": 891,
-      "y": 170
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397688868,
-    "data": {
-      "scrollTop": 100,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397689011,
-    "data": {
-      "scrollTop": 200,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397689047,
-    "data": {
-      "x": 891,
-      "y": 271
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397689348,
-    "data": {
-      "x": 892,
-      "y": 384
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397689649,
-    "data": {
-      "x": 897,
-      "y": 389
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397689875,
-    "data": {
-      "scrollTop": 300,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397689911,
-    "data": {
-      "scrollTop": 400,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397689950,
-    "data": {
-      "x": 882,
-      "y": 599
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397690537,
-    "data": {
-      "scrollTop": 500,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397690552,
-    "data": {
-      "x": 725,
-      "y": 628
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397690858,
-    "data": {
-      "x": 675,
-      "y": 730
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397690924,
-    "data": {
-      "scrollTop": 600,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397691159,
-    "data": {
-      "x": 494,
-      "y": 837
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397691639,
-    "data": {
-      "scrollTop": 700,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397691761,
-    "data": {
-      "x": 336,
-      "y": 937
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397691981,
-    "data": {
-      "scrollTop": 800,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397692062,
-    "data": {
-      "x": 334,
-      "y": 1041
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397692663,
-    "data": {
-      "x": 406,
-      "y": 1038
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397692964,
-    "data": {
-      "x": 562,
-      "y": 1036
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397693265,
-    "data": {
-      "x": 705,
-      "y": 1040
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397693565,
-    "data": {
-      "x": 871,
-      "y": 1087
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397693652,
-    "data": {
-      "scrollTop": 900,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397693671,
-    "data": {
-      "scrollTop": 1200,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397693866,
-    "data": {
-      "x": 955,
-      "y": 1499
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397694186,
-    "data": {
-      "scrollTop": 1300,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397694201,
-    "data": {
-      "scrollTop": 1400,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397694351,
-    "data": {
-      "scrollTop": 1500,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397694468,
-    "data": {
-      "x": 950,
-      "y": 1590
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397694538,
-    "data": {
-      "scrollTop": 1600,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397694870,
-    "data": {
-      "scrollTop": 1700,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397694896,
-    "data": {
-      "scrollTop": 1800,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397694919,
-    "data": {
-      "scrollTop": 1900,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397695069,
-    "data": {
-      "x": 944,
-      "y": 2185
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397695089,
-    "data": {
-      "scrollTop": 2000,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397695371,
-    "data": {
-      "x": 940,
-      "y": 2286
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397695972,
-    "data": {
-      "x": 922,
-      "y": 2288
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397696273,
-    "data": {
-      "x": 901,
-      "y": 2292
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397696573,
-    "data": {
-      "x": 851,
-      "y": 2297
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397696874,
-    "data": {
-      "x": 645,
-      "y": 2303
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397697175,
-    "data": {
-      "x": 492,
-      "y": 2227
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397697201,
-    "data": {
-      "scrollTop": 1900,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397697218,
-    "data": {
-      "scrollTop": 1800,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397697267,
-    "data": {
-      "scrollTop": 1700,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397697308,
-    "data": {
-      "scrollTop": 1600,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397697476,
-    "data": {
-      "x": 457,
-      "y": 1819
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397697586,
-    "data": {
-      "scrollTop": 1500,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397697617,
-    "data": {
-      "scrollTop": 1400,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397697634,
-    "data": {
-      "scrollTop": 1300,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397697651,
-    "data": {
-      "scrollTop": 1200,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397697667,
-    "data": {
-      "scrollTop": 1100,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397697685,
-    "data": {
-      "scrollTop": 1000,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397697778,
-    "data": {
-      "x": 446,
-      "y": 1719
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397698017,
-    "data": {
-      "scrollTop": 900,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397698034,
-    "data": {
-      "scrollTop": 800,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397698079,
-    "data": {
-      "x": 445,
-      "y": 1219
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397698084,
-    "data": {
-      "scrollTop": 500,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397698135,
-    "data": {
-      "scrollTop": 400,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397698201,
-    "data": {
-      "scrollTop": 300,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397698501,
-    "data": {
-      "scrollTop": 200,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397698517,
-    "data": {
-      "scrollTop": 100,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "scroll",
-    "date": 1418397698536,
-    "data": {
-      "scrollTop": 0,
-      "scrollLeft": 0
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397698681,
-    "data": {
-      "x": 444,
-      "y": 519
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397698982,
-    "data": {
-      "x": 443,
-      "y": 235
-    }
-  },
-  {
-    "event": "click",
-    "date": 1418397699196
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397699283,
-    "data": {
-      "x": 555,
-      "y": 254
-    }
-  },
-  {
-    "event": "click",
-    "date": 1418397699533
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397699584,
-    "data": {
-      "x": 533,
-      "y": 268
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397699884,
-    "data": {
-      "x": 265,
-      "y": 276
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397700185,
-    "data": {
-      "x": 146,
-      "y": 279
-    }
-  },
-  {
-    "event": "click",
-    "date": 1418397700278
-  },
-  {
-    "event": "keypress",
-    "date": 1418397701074,
-    "data": {
-      "keyCode": 72
-    }
-  },
-  {
-    "event": "keypress",
-    "date": 1418397701112,
-    "data": {
-      "keyCode": 71
-    }
-  },
-  {
-    "event": "keypress",
-    "date": 1418397701324,
-    "data": {
-      "keyCode": 74
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397701391,
-    "data": {
-      "x": 325,
-      "y": 277
-    }
-  },
-  {
-    "event": "click",
-    "date": 1418397701553
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397701692,
-    "data": {
-      "x": 526,
-      "y": 207
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397701993,
-    "data": {
-      "x": 166,
-      "y": 309
-    }
-  },
-  {
-    "event": "click",
-    "date": 1418397702052
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397702294,
-    "data": {
-      "x": 189,
-      "y": 303
-    }
-  },
-  {
-    "event": "click",
-    "date": 1418397702559
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397702596,
-    "data": {
-      "x": 457,
-      "y": 190
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397702897,
-    "data": {
-      "x": 496,
-      "y": 191
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397703499,
-    "data": {
-      "x": 560,
-      "y": 260
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397703807,
-    "data": {
-      "x": 658,
-      "y": 341
-    }
-  },
-  {
-    "event": "mousemove",
-    "date": 1418397704108,
-    "data": {
-      "x": 681,
-      "y": 291
-    }
-  }
-]
-</span>
+<span id="history">[{"event":"init","date":1421251733003,"data":{"url":"https://gazerjs-qetbn.c9.io/index.html?_c9_id=livepreview0&_c9_host=https://ide.c9.io","height":775,"width":1583,"navigator":"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/39.0.2171.95 Safari/537.36","pageX":1582,"pageY":2076,"scrollTop":1400,"scrollLeft":0,"minMouseMove":5}},{"event":"scroll","date":1421251733009,"data":{"scrollTop":1,"scrollLeft":0}},{"event":"mousemove","date":1421251733308,"data":{"x":559,"y":213}},{"event":"mousemove","date":1421251733609,"data":{"x":700,"y":251}},{"event":"mousemove","date":1421251733910,"data":{"x":631,"y":327}},{"event":"mousemove","date":1421251734212,"data":{"x":601,"y":342}},{"event":"mousemove","date":1421251734513,"data":{"x":554,"y":352}},{"event":"mousemove","date":1421251734814,"data":{"x":518,"y":353}},{"event":"click","date":1421251734819,"data":{"target":"html > body > div > p"}},{"event":"mousemove","date":1421251735116,"data":{"x":563,"y":353}},{"event":"select","date":1421251735404,"data":{"text":" incidid","target":"html > body > div > p"}},{"event":"mousemove","date":1421251735718,"data":{"x":206,"y":315}},{"event":"mousemove","date":1421251736020,"data":{"x":130,"y":298}},{"event":"click","date":1421251736084,"data":{"target":"html > body > div > div:nth-child(2) > input"}},{"event":"focus","date":1421251736086,"data":{"target":"html > body > div > div:nth-child(2) > input"}},{"event":"mousemove","date":1421251736622,"data":{"x":145,"y":289}},{"event":"keypress","date":1421251736813,"data":{"keyCode":71}},{"event":"keypress","date":1421251736907,"data":{"keyCode":68}},{"event":"keypress","date":1421251736915,"data":{"keyCode":70}},{"event":"mousemove","date":1421251736923,"data":{"x":514,"y":309}},{"event":"click","date":1421251737099,"data":{"target":"html > body > div"}},{"event":"change","date":1421251737100,"data":{"value":"gdf","target":"html > body > div > div:nth-child(2) > input"}},{"event":"mousemove","date":1421251737224,"data":{"x":570,"y":330}},{"event":"click","date":1421251737475,"data":{"target":"html > body > div > button"}},{"event":"focus","date":1421251737477,"data":{"target":"html > body > div > button"}},{"event":"mousemove","date":1421251737525,"data":{"x":546,"y":273}},{"event":"mousemove","date":1421251737826,"data":{"x":720,"y":424}},{"event":"click","date":1421251737844,"data":{"target":"html > body > div"}},{"event":"scroll","date":1421251738100,"data":{"scrollTop":101,"scrollLeft":0}},{"event":"mousemove","date":1421251738127,"data":{"x":800,"y":484}},{"event":"scroll","date":1421251738134,"data":{"scrollTop":201,"scrollLeft":0}},{"event":"scroll","date":1421251738150,"data":{"scrollTop":301,"scrollLeft":0}},{"event":"scroll","date":1421251738196,"data":{"scrollTop":401,"scrollLeft":0}},{"event":"mousemove","date":1421251738428,"data":{"x":1353,"y":515}},{"event":"mousemove","date":1421251738729,"data":{"x":1484,"y":402}},{"event":"resize","date":1421251738966,"data":{"height":529,"width":854}},{"event":"mousemove","date":1421251740235,"data":{"x":700,"y":458}},{"event":"resize","date":1421251740236,"data":{"height":775,"width":1583}},{"event":"mousemove","date":1421251740537,"data":{"x":951,"y":767}},{"event":"scroll","date":1421251740572,"data":{"scrollTop":301,"scrollLeft":0}},{"event":"scroll","date":1421251740600,"data":{"scrollTop":201,"scrollLeft":0}},{"event":"scroll","date":1421251740634,"data":{"scrollTop":101,"scrollLeft":0}},{"event":"scroll","date":1421251740650,"data":{"scrollTop":1,"scrollLeft":0}},{"event":"scroll","date":1421251740696,"data":{"scrollTop":0,"scrollLeft":0}},{"event":"mousemove","date":1421251740838,"data":{"x":1038,"y":452}},{"event":"mousemove","date":1421251741139,"data":{"x":748,"y":422}},{"event":"click","date":1421251741220,"data":{"target":"html > body > div"}},{"event":"select","date":1421251741323,"data":{"text":"t occae","target":"html > body > div > p"}},{"event":"mousemove","date":1421251741441,"data":{"x":644,"y":433}},{"event":"mousemove","date":1421251741742,"data":{"x":525,"y":376}},{"event":"mousemove","date":1421251742043,"data":{"x":527,"y":266}},{"event":"click","date":1421251742211,"data":{"target":"html > body > div"}},{"event":"mousemove","date":1421251742345,"data":{"x":1267,"y":160}},{"event":"scroll","date":1421251742571,"data":{"scrollTop":100,"scrollLeft":0}},{"event":"scroll","date":1421251742600,"data":{"scrollTop":200,"scrollLeft":0}},{"event":"scroll","date":1421251742617,"data":{"scrollTop":300,"scrollLeft":0}},{"event":"scroll","date":1421251742633,"data":{"scrollTop":500,"scrollLeft":0}},{"event":"mousemove","date":1421251742646,"data":{"x":1397,"y":854}},{"event":"scroll","date":1421251742650,"data":{"scrollTop":600,"scrollLeft":0}},{"event":"scroll","date":1421251742667,"data":{"scrollTop":700,"scrollLeft":0}},{"event":"scroll","date":1421251742700,"data":{"scrollTop":800,"scrollLeft":0}},{"event":"scroll","date":1421251742947,"data":{"scrollTop":900,"scrollLeft":0}},{"event":"mousemove","date":1421251742950,"data":{"x":1293,"y":1255}},{"event":"scroll","date":1421251742967,"data":{"scrollTop":1000,"scrollLeft":0}},{"event":"scroll","date":1421251742983,"data":{"scrollTop":1200,"scrollLeft":0}},{"event":"scroll","date":1421251743001,"data":{"scrollTop":1300,"scrollLeft":0}},{"event":"scroll","date":1421251743018,"data":{"scrollTop":1400,"scrollLeft":0}},{"event":"mousemove","date":1421251743251,"data":{"x":1281,"y":1867}},{"event":"mousemove","date":1421251743553,"data":{"x":1277,"y":1878}},{"event":"mousemove","date":1421251743854,"data":{"x":1424,"y":2004}},{"event":"mousemove","date":1421251744155,"data":{"x":1582,"y":2076}}]</span>
 </body>
 </html>
